--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HTML Ultimate Challenge</title>
     <title>HTML Ultimate Challenge Lite</title>
 </head>
-<body>
+<corps>
     <p>I'm a Big Title</p>
     <nav>
         Menu
@@ -49,6 +49,8 @@
     </tr>
     </table>
 
+    <i'm-a-bad-html-tag>How do you think i would be displayed ?</i'm-a-bad-html-tag>
+
     <main>
       <article>
         <h2>En-tête d'article</h2>
@@ -78,4 +80,4 @@
     <footer>
       <p>Copyright 2022 par Walid Berrouk. <span>Tous droits</span> reversés.</p>
     </footer>
-<body>
+<corps>
