--- a/index.html
+++ b/index.html
@@ -4,78 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Ultimate Challenge</title>
-    <title>HTML Ultimate Challenge Lite</title>
+    <header>HTML Ultimate Challenge</header>
+    <header>HTML Ultimate Challenge Lite</header>
 </head>
 <corps>
-    <p>I'm a Big Title</p>
-    <nav>
-        Menu
-      <div>Home</div>
-      <div>About</div>
-      <div>Events</div>
-      <div>Gallery</div>
-      <div>Contact</div>
-    </nav>
-    <div>
-        <div>
-            <div>
-                <div>
-                    <div>
-                        <div>
-                            <p>I'm so alone :'(</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <h1>I'm a paragraph, look : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus officia voluptate non. Accusantium consequuntur quibusdam excepturi mollitia itaque voluptate maxime ut, iste iure odit culpa! Necessitatibus exercitationem sequi ratione reiciendis?</h1>
+    <navigation>
+       <h1>Menu</h1>
+      Home
+      About
+      Events
+      Gallery
+      Contact
+    </navigation>
 
     <table>
-    <tr>
-        <td>Title1</td>
-        <td>Title2</td>
-        <td>Title3</td>
-    </tr>
-    <tr>
+    <th>
+        <tr>Title1</tr>
+        <tr>Title2</tr>
+        <tr>Title3</tr>
+    </th>
+    <thead>
         <th>Student1</th>
         <th>16</th>
         <th>14</th>
-    </tr>
-    <tr>
+    </thead>
+    <thead>
         <td>Student2</td>
         <td>13</td>
         <td>17</td>
-    </tr>
+    </thead>
     </table>
 
     <i'm-a-bad-html-tag>How do you think i would be displayed ?</i'm-a-bad-html-tag>
 
-    <main>
+    <main att="idName">
       <article>
         <h2>En-tête d'article</h2>
         <p>Contenu d'article</p>
       </aside>
-      <article>
+      <article class="idName">
         <h2>En relation</h2>
       </aside>
     </main>
 
-    <form action="https://www.google.com/search" method="get">
+    <formulaire action="https://www.google.com/search" method="get">
         <h1>Form Example</h1>
-        <section>
+        <sectione>
           <h2>Personnal Infos</h2>
           <p>
             <label for="nom">Name</label>
-            <input type="text" name="nom" id="nom" placeholder="Insert your name"
+            <input type="txt" name="nom" id="nom" placeholder="Insert your name"
                       minlength="2" required>
           </p>
           <p>
             <label for="dn">Birthdate</label>
-            <input type="date" name="dn" id="dn" min="1930-01-01" max="2002-12-31">
+            <input type="birthdate" name="dn" id="dn" min="1930-01-01" max="2002-12-31">
           </p>
-        </section>
-    </form>
+        </sectione>
+    </formulaire>
+
+    <div>
+      <h3>Card Title 1</h3>
+      <p>Card paragraph 1, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eligendi perspiciatis totam modi eius veritatis.</p>
+      <h3>Card Title 2</h3>
+      <p>Card paragraph 2, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eligendi perspiciatis totam modi eius veritatis.</p>
+      <h3>Card Title 3</h3>
+      <p>Card paragraph 3, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eligendi perspiciatis totam modi eius veritatis.</p>
+
+    </div>
 
     <footer>
       <p>Copyright 2022 par Walid Berrouk. <span>Tous droits</span> reversés.</p>
