deux header dans la partie meta-donnees

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <header>HTML Ultimate Challenge</header>
-    <header>HTML Ultimate Challenge Lite</header>
-</head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <header>
+    <h1>
+      HTML Ultimate Challenge <br>
+      HTML Ultimate Challenge Lite
+    </h1>
+  </header>
 <corps>
     <h1>I'm a paragraph, look : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus officia voluptate non. Accusantium consequuntur quibusdam excepturi mollitia itaque voluptate maxime ut, iste iure odit culpa! Necessitatibus exercitationem sequi ratione reiciendis?</h1>
     <navigation>
