--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       HTML Ultimate Challenge Lite
     </h1>
   </header>
-<corps>
+  <body>
     <h1>I'm a paragraph, look : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus officia voluptate non. Accusantium consequuntur quibusdam excepturi mollitia itaque voluptate maxime ut, iste iure odit culpa! Necessitatibus exercitationem sequi ratione reiciendis?</h1>
     <navigation>
        <h1>Menu</h1>
@@ -79,8 +79,9 @@
       <p>Card paragraph 3, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim eligendi perspiciatis totam modi eius veritatis.</p>
 
     </div>
-
-    <footer>
-      <p>Copyright 2022 par Walid Berrouk. <span>Tous droits</span> reversés.</p>
-    </footer>
-<corps>
+  </body>
+      
+    
+  <footer>
+    <p>Copyright 2022 par Walid Berrouk. <span>Tous droits</span> reversés.</p>
+  </footer>
