paragraphe dans une balise h1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+  </head>
     <header>
       <h1>
         HTML Ultimate Challenge <br>
@@ -12,7 +12,10 @@
       </h1>
     </header>
     <body>
-      <h1>I'm a paragraph, look : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus officia voluptate non. Accusantium consequuntur quibusdam excepturi mollitia itaque voluptate maxime ut, iste iure odit culpa! Necessitatibus exercitationem sequi ratione reiciendis?</h1>
+      
+      <p>
+        I'm a paragraph, look : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus officia voluptate non. Accusantium consequuntur quibusdam excepturi mollitia itaque voluptate maxime ut, iste iure odit culpa! Necessitatibus exercitationem sequi ratione reiciendis?
+      </p>
       <navigation>
         <h1>Menu</h1>
         Home
@@ -23,21 +26,21 @@
       </navigation>
 
       <table>
-      <th>
-          <tr>Title1</tr>
-          <tr>Title2</tr>
-          <tr>Title3</tr>
-      </th>
-      <thead>
-          <th>Student1</th>
-          <th>16</th>
-          <th>14</th>
-      </thead>
-      <thead>
-          <td>Student2</td>
-          <td>13</td>
-          <td>17</td>
-      </thead>
+        <th>
+            <tr>Title1</tr>
+            <tr>Title2</tr>
+            <tr>Title3</tr>
+        </th>
+        <thead>
+            <th>Student1</th>
+            <th>16</th>
+            <th>14</th>
+        </thead>
+        <thead>
+            <td>Student2</td>
+            <td>13</td>
+            <td>17</td>
+        </thead>
       </table>
 
       <i'm-a-bad-html-tag>How do you think i would be displayed ?</i'm-a-bad-html-tag>
