correction de la balise i (icon)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </tbody>
     </table>  
     
-    <i'm-a-bad-html-tag>How do you think i would be displayed ?</i'm-a-bad-html-tag>
+    <i>How do you think i would be displayed ?</i>
 
     <main att="idName">
       <article>
